--- a/front/package.json
+++ b/front/package.json
@@ -13,10 +13,11 @@
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "react-draggable": "^4.4.3"
+    "sass": "^1.71.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
