--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "react-draggable": "^4.4.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-speech-recognition": "^3.10.0",
     "sass": "^1.71.1",
     "web-vitals": "^2.1.4"
   },
